# LifeLua

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  _controls_8lua-example.html  _hello_world_8lua-example.html  _im_gui_8lua-example.html  _s_f_o_8lua-example.html  doxygen_crawl.html  examples.html  examples.js  group__audio.html  group__audio.js  group__camera.html  group__camera.js  group__color.html  group__color.js  group__controls.html  group__controls.js  group__draw.html  group__draw.js  group__font.html  group__font.js  group__image.html  group__image.js  group__imgui.html  group__imgui.js  group__io.html  group__io.js  group__json.html  group__json.js  group__math.html  group__math.js  group__model.amera.html  group__network.html  group__network.js  group__os.html  group__os.js  group__render.amera.html  (+47 more)
docs/: Controls.lua  Doxyfile  HelloWorld.lua  ImGui.lua  Mainpage.dox  SFO.lua  _controls_8lua-example.html  _hello_world_8lua-example.html  annotated.html  annotated_dup.js  class_b.html  class_c.html  class_c1.html  class_fn___test-members.html  class_fn___test.html  classes.html  classos-members.html  classos.html  classos.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dot_escape.sh  doxygen_crawl.html  examples.html  examples.js  ftpvita_8h_source.html  functions_func.html  group___camera.js  group___int_variables.html  group___variables.js  group__audio.html  group__audio.js  group__camera.html  group__color.html  group__color.js  group__controls.html  group__controls.js  group__draw.html  group__draw.js  group__font.html  group__font.js  (+85 more)
docs/html/: _hello_world_8lua-example.html  doxygen.css  doxygen_crawl.html  group__camera.js  group__color.html  group__draw.js  group__image.html  group__imgui.html  group__imgui.js  group__math.js  group__model.html  group__network.js  group__render.html  group__sqlite3.html  group__string.js  group__thread.html  index.html  lj__3d_8h.html  lj__3d_8h_source.html  lj__audio_8h_source.html  lj__camera_8h_source.html  lj__draw_8h_source.html  lj__imgui_8h_source.html  lj__io_8h_source.html  lj__math_8h_source.html  lj__sqlite_8h_source.html  lj__table_8h_source.html  lj__thread_8h_source.html  lj__timer_8h_source.html  navtreeindex0.js  pages.html  todo.html  topics.html  topics.js
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_e.js  functions_f.js  groups_0.js  groups_3.js  groups_5.js  groups_7.js  (+19 more)
html/: annotated.html  annotated_dup.js  api.html  class_c2.html  class_foo.html  class_test-members.html  class_test.html  class_test.js  classdraw.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  doxygen_crawl.html  examples.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  group___camera.html  group___int_variables.js  group___variables.html  group__color.html  group__color.js  group__draw.js  group__foobar.html  group__group1.html  group__os.html  hello-example.html  hello.html  lj__lifeinit_8h_source.html  mypage1.html  navtreeindex0.js  sha1_8h_source.html  struct_color.html  struct_color.js  struct_font.html  struct_image.js  struct_s_f_o_entry.html  struct_s_f_o_header.html  struct_s_f_o_header.js  struct_s_h_a1___c_t_x.html  (+14 more)
html/search/: all_11.js  all_4.js  all_5.js  all_a.js  all_e.js  enums_0.js  functions_3.js  functions_6.js  pages_4.js  pages_5.js  pages_7.js  searchdata.js  variables_4.js  variables_c.js  variables_d.js
sample/: README.md  main.lua  scroll.lua
sample/samples/: .SFO Reader.lua  3 Button Message.lua  App Launcher.lua  Battery.lua  Controls.lua  Drawing.lua  FTP.lua  File Manager.lua  Hello World.lua  Image.lua  Keyboard.lua  Lerp.lua  Message 2.lua  (+10 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  groups_a.js  groups_b.js  search.js  searchdata.js  variables_0.js
src/: lj_lifeaudio.c  lj_lifecamera.c  lj_lifecolor.c  lj_lifecontrols.c  lj_lifedraw.c  lj_lifefont.c  lj_lifeimage.c  lj_lifeimgui.c++  lj_lifeinit.h  lj_lifeio.c  lj_lifejson.c  lj_lifemain.c  lj_lifemathext.c  lj_lifemicrophone.c  lj_lifenetwork.c  lj_lifeos.c  lj_liferender.c  lj_lifesqlite.c  lj_lifestring.c  lj_lifethread.c  lj_lifetimer.c  lj_lifetoml.c  lj_lifevideo.c  main.c
(+37 files in other folders)
